--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,7 +26,7 @@ header {
 }
 
 .logo {  
-  max-width: 150px;
+  width: 150px;
   height: auto;
 } 
 
@@ -157,7 +157,7 @@ header {
   justify-content: center;
   font-weight: bold;
   color: green;
-  font-size: 16px;
+  font-size: 1rem;
 
 }
 /* ----------------------*/
@@ -300,7 +300,7 @@ footer{
 }
 
 #reseñas h2 {
-  font-family: "Bebas Neue", sans-serif;
+  
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 2rem;
