--- a/CSS/style.css
+++ b/CSS/style.css
@@ -294,13 +294,16 @@ footer{
 }
 
 #reseñas h2 {
-  
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 2rem;
   color: #5a4a42;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+.tituloreseñas {
+  font-family: "Bebas Neue", sans-serif;
 }
 
 #btn-anterior,
